FIX: limits max height to viewport on channel only
Before this commit chat was applying a fixed height on everything under he /chat/ route. It's only really needed on the channel page with the composer at the bottom of the page.

This commits makes the following changes:
- moves height limitation from `#main-outlet-wrapper` to `.chat-channel`
- makes browse channel page and members list page full height and rely on main document scrollbar
- adds height computation for draft header and direct message creator block to ensure the height is correct when creating a draft channel
- makes chat index full height to rely on the browser scrollbar. As a result the ( + ) button used on mobile to create a direct message as been moved out of `<ChannelsList>` into the chat index template
- sidebar height was relying on chat setting a max height, as a result the height computation of sidebar has been changed to work correctly, especially with an opened keyboard on mobile or ipad

--- a/plugins/chat/assets/stylesheets/common/chat-index.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-index.scss
@@ -1,15 +1,4 @@
 .channels-list {
-  overflow-y: auto;
-  overscroll-behavior: contain;
-  height: 100%;
-  padding-bottom: env(safe-area-inset-bottom);
-  position: relative;
-  @include chat-scrollbar();
-
-  @include breakpoint(mobile-large) {
-    @include chat-scrollbar();
-  }
-
   .open-browse-page-btn,
   .open-draft-channel-page-btn,
   .chat-channel-leave-btn {
